k8s/backend-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: kubecart-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubecart-backend
  template:
    metadata:
      labels:
        app: kubecart-backend
    spec:
      containers:
        - name: backend
          image: sanketf5/kubecart-backend:latest
          ports:
            - containerPort: 5000
