k8s/backend-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: kubecart-backend-service 
spec:
  type: NodePort
  selector: 
    app: kubecart-backend
  ports:  
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
